@@ -2,7 +2,7 @@
 # CHANGES - change log of OTRS
 # Copyright (C) 2001-2008 OTRS AG, http://otrs.org/
 # --
-# $Id: CHANGES,v 1.695 2008-07-01 22:32:26 martin Exp $
+# $Id: CHANGES,v 1.696 2008-07-02 08:09:45 mh Exp $
 # --
 # This software comes with ABSOLUTELY NO WARRANTY. For details, see
 # the enclosed file COPYING for license information (GPL). If you
@@ -10,6 +10,8 @@
 # --
 
 2.3.0 beta4 (2008/07/??)
+ - (2008/07/02) Fixed bug# 3048 - AgentLinkObject shows a wrong search result
+    list, if a object cannot link with itself.
  - (2008/07/02) Added AJAX support to ticket move screen.
  - (2008/07/01) Added priority management mask to the admin interface.
  - (2008/07/01) Fixed bug# 3046 - Phone and Email-Ticket needs to get clicked
